Correción de errores

--- a/02LinksYDivs/Index.html
+++ b/02LinksYDivs/Index.html
@@ -160,10 +160,8 @@
             </blockquote>
         </div>
 
-        <p><a href="prueba.html" target="_blank" title="pagina links"><h3>Página de prueba</h3></a></p>
-    
-
-        <a href="#header" title= "Volver al inicio"><h3>Volver al inicio </h3></a>
+        <p><a href="Prueba.html"><h3>Página de prueba</h3></a></p>
+        <p><a href="#header"><h3>Volver al inicio </h3></a></p>
 
     </body>
     
