06: Formato de texto, fuentes, fondos y bordes

--- a/05Semantica/CreateAccount.html
+++ b/05Semantica/CreateAccount.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Minerales Paceños es un sitio de divulgación de minerales">
 
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="CSS/Style.css">
         <title>Crear cuenta</title>
     </head>
 
@@ -20,7 +21,7 @@
                 <table border="0" width="100%">
                         <tbody>
                             <tr align="center">
-                                <td><li style="list-style:none;"><a href="Index.html">Regresar</a></li></td>
+                                <td><li class="navLink"><a href="Index.html">Regresar</a></li></td>
                             </tr>
                         </tbody>
                     </table>
