09: Formulario con estilos, pseudoelementos y pseudoclases

--- a/Sitio-Web/Index.html
+++ b/Sitio-Web/Index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta lang="es">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="EstaHambreQueAta">
         <meta name="description" content="En EstaHambreQueAta desatas tu creatividad con estambres">
 
@@ -39,7 +38,7 @@
 
                 <button class="search-button"><img src="images/searchIcon.svg" alt="search"></button>
 
-                <button class="account-button"><img src="images/userIcon.svg" alt="account"></button>
+                <button class="account-button" title="Crear Cuenta"><a target="_blank" href="CreateAccount.html"><img src="images/userIcon.svg" alt="account"></a></button>
 
                 <button class="cart-button"><img src="images/cartIcon.svg" alt="cart"></button>
             </nav>
@@ -273,7 +272,7 @@
                 </span>
 
                 <div class="social-media-links">
-                    <button class="instagram-button"><img src="images/instagramIcon.svg" alt="account"></button>
+                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="images/instagramIcon.svg" alt="account"></a></button>
                     <button class="youtube-button"><img src="images/youtubeIcon.svg" alt="cart"></button>
                 </div>
             </div>
