Botones funcionales añadidos

--- a/Sitio-Web/CreateAccount.html
+++ b/Sitio-Web/CreateAccount.html
@@ -36,10 +36,8 @@
                 </ul>
 
                 <button class="search-button"><img src="images/searchIcon.svg" alt="search"></button>
-
-                <button class="account-button" title="Crear Cuenta"><a target="_blank" href="CreateAccount.html"><img src="images/userIcon.svg" alt="account"></a></button>
-
-                <button class="cart-button"><img src="images/cartIcon.svg" alt="cart"></button>
+                <button class="account-button" title="Crear Cuenta"><a href="CreateAccount.html"><img src="images/userIcon.svg" alt="account"></a></button>
+                <button class="cart-button" title="Tienda"><a href="Index.html"><img src="images/cartIcon.svg" alt="cart"></a></button>
             </nav>
         </header>
 
