Fondo de página con textura

--- a/Sitio-Web/CreateAccount.html
+++ b/Sitio-Web/CreateAccount.html
@@ -51,12 +51,12 @@
 
                     <div class="name-input-container">
                         <label for="name">Nombre de usuario:</label>
-                        <input id="name" type="text" name="name" placeholder="Nombre de usuario" required>
+                        <input id="name" type="text" name="name" placeholder="Usuario" required>
                     </div>
                     
                     <div class="email-input-container">
                         <label for="email">Correo electrónico:</label>
-                        <input id="email" type="email" name="email" placeholder="Correo electrónico" required>
+                        <input id="email" type="email" name="email" placeholder="Ejemplo@gmail.com" required>
                     </div>
                     
                     <div class="password-input-container">
@@ -82,8 +82,8 @@
                                 <option value="embroidery">Bordado</option>
                                 <option value="macramé">Macramé</option>
                                 <option value="quilting">Edredón bordado</option> 
-                                <option value="patchwork">Manta bordado</option>
-                                <option value="Nålebinding">Nålebinding</option>  
+                                <option value="patchwork">Manta bordada</option>
+                                <option value="Nålebinding">Tejido Escandinavo (Nålebinding)</option>  
                             </optgroup>
                         </select> 
                     </div>
