Posición de artículo modificada

--- a/Sitio-Web/Index.html
+++ b/Sitio-Web/Index.html
@@ -119,6 +119,12 @@
                          MADEJA de 100g con 180m $75.00 MXN</h4>
                     </div>
 
+                     <div class="art-item">
+                        <img src="images/estambreImg.png">
+                        <h4 class="art-desc">Hilaza Otoño, marca Omega,
+                         MADEJA de 100g con 180m $75.00 MXN</h4>
+                    </div>
+
                     <div class="art-item">
                         <img src="images/estambreImg.png">
                         <h4 class="art-desc">Hilaza Otoño, marca Omega,
@@ -160,6 +166,12 @@
 
                 <div class="seasonal-art-item-container">
                     <div class="art-item">
+                        <img src="images/estambreImg.png">
+                        <h4 class="art-desc">Hilaza Otoño, marca Omega,
+                         MADEJA de 100g con 180m $75.00 MXN</h4>
+                    </div>
+
+                     <div class="art-item">
                         <img src="images/estambreImg.png">
                         <h4 class="art-desc">Hilaza Otoño, marca Omega,
                          MADEJA de 100g con 180m $75.00 MXN</h4>
