Ruta de imagen modificada

--- a/Sitio-Web/Index.html
+++ b/Sitio-Web/Index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="EstaHambreQueAta">
         <meta name="description" content="En EstaHambreQueAta desatas tu creatividad con estambres">
 
-        <link rel="icon" href="images/EHQALogoCropped.svg" type="image/x-icon"> 
+        <link rel="icon" href="Images/EHQALogoCropped.svg" type="image/x-icon"> 
         <link rel="stylesheet" href="CSS/Style.css">
         
         <title>EstaHambreQueAta</title>
@@ -18,7 +18,7 @@
         <header>
             <nav>
                 <span class="svg-logo">
-                    <img  src="images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img  src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <ul class="nav-link-list">
@@ -332,8 +332,8 @@
                 </span>
 
                 <div class="social-media-links">
-                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="images/instagramIcon.svg" alt="account"></a></button>
-                    <button class="youtube-button"><img src="Images/youtubeIcon.svg" alt="cart"></button>
+                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="images/instagramIcon.svg" alt="Instagram"></a></button>
+                    <button class="youtube-button"><img src="Images/youtubeIcon.svg" alt="Youtube"></button>
                 </div>
             </div>
 
