Revert:"Ruta de imagen modificada"

--- a/Sitio-Web/Index.html
+++ b/Sitio-Web/Index.html
@@ -262,7 +262,7 @@
 
             <div class="info-banner-statement">
                 <span class="star-review-icon">
-                    <img src="images/starIcon.svg" alt="star-review-icon">
+                    <img src="Images/starIcon.svg" alt="star-review-icon">
                 </span>
 
                 <h4 class="banner-text-review">
@@ -272,7 +272,7 @@
 
             <div class="info-banner-statement">
                 <span class="shipping-icon">
-                    <img src="images/truckIcon.svg" alt="shipping-icon">
+                    <img src="Images/truckIcon.svg" alt="shipping-icon">
                 </span>
 
                 <h4 class="banner-text-shipping"> 
@@ -282,7 +282,7 @@
            
             <div class="info-banner-statement">
                 <span class="return-icon">
-                    <img src="images/boxIcon.svg" alt="return-icon">
+                    <img src="Images/boxIcon.svg" alt="return-icon">
                 </span>
 
                 <h4 class="banner-text-return">
@@ -332,8 +332,8 @@
                 </span>
 
                 <div class="social-media-links">
-                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="images/instagramIcon.svg" alt="Instagram"></a></button>
-                    <button class="youtube-button"><img src="Images/youtubeIcon.svg" alt="Youtube"></button>
+                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="Images/instagramIcon.svg" alt="account"></a></button>
+                    <button class="youtube-button"><img src="Images/youtubeIcon.svg" alt="cart"></button>
                 </div>
             </div>
 
