Rutas de imágenes y texto alt

--- a/Sitio-Web/CreateAccount.html
+++ b/Sitio-Web/CreateAccount.html
@@ -7,16 +7,8 @@
         <meta name="author" content="EstaHambreQueAta">
         <meta name="description" content="En EstaHambreQueAta desatas tu creatividad con estambres">
 
-        <link rel="icon" href="images/EHQALogoCropped.svg" type="image/x-icon"> 
+        <link rel="icon" href="Images/EHQALogoCropped.svg" type="image/x-icon"> 
         <link rel="stylesheet" href="CSS/Style.css">
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <title>Crear cuenta</title>
     </head>
@@ -25,7 +17,7 @@
         <header>
             <nav>
                 <span class="svg-logo">
-                    <img  src="images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img  src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <ul class="nav-link-list">
@@ -33,6 +25,7 @@
                         <ul class="nav-link-sub-list">
                             <li><a>Algodón</a></li>
                             <li><a>Lana</a></li>
+                            <li><a>Lana merino</a></li>
                             <li><a>Lino</a></li>
                         </ul>
                     </li>
@@ -62,9 +55,9 @@
                     </li>
                 </ul>
 
-                <button class="search-button"><img src="images/searchIcon.svg" alt="search"></button>
-                <button class="account-button" title="Crear Cuenta"><a href="CreateAccount.html"><img src="images/userIcon.svg" alt="account"></a></button>
-                <button class="cart-button" title="Tienda"><a href="Index.html"><img src="images/cartIcon.svg" alt="cart"></a></button>
+                <button class="search-button" title="Buscar"><img src="Images/searchIcon.svg" alt="search"></button>
+                <button class="account-button" title="Crear Cuenta"><a href="CreateAccount.html"><img src="Images/userIcon.svg" alt="account"></a></button>
+                <button class="cart-button" title="Tienda"><a href="Index.html"><img src="Images/cartIcon.svg" alt="cart"></a></button>
             </nav>
         </header>
 
@@ -182,12 +175,12 @@
 
             <div class="footer-brand-links-bar">
                 <span class="svg-logo">
-                    <img src="images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <div class="social-media-links">
-                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="images/instagramIcon.svg" alt="account"></a></button>
-                    <button class="youtube-button"><img src="images/youtubeIcon.svg" alt="cart"></button>
+                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="Images/instagramIcon.svg" alt="Instagram"></a></button>
+                    <button class="youtube-button" title="Youtube"><img src="Images/youtubeIcon.svg" alt="Youtube"></button>
                 </div>
             </div>
 
