--- a/Sitio-Web/Index.html
+++ b/Sitio-Web/Index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="EstaHambreQueAta">
-        <meta name="description" content="En EstaHambreQueAta desatas tu creatividad con estambres">
+        <meta name="description" content="EstaHambreQueAta desata la creatividad">
 
         <link rel="icon" href="Images/EHQALogoCropped.svg" type="image/x-icon"> 
         <link rel="stylesheet" href="CSS/Style.css">
@@ -332,8 +332,8 @@
                 </span>
 
                 <div class="social-media-links">
-                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="Images/instagramIcon.svg" alt="account"></a></button>
-                    <button class="youtube-button"><img src="Images/youtubeIcon.svg" alt="cart"></button>
+                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="Images/instagramIcon.svg" alt="Instagram"></a></button>
+                    <button class="youtube-button" title="Youtube"><img src="Images/youtubeIcon.svg" alt="Youtube"></button>
                 </div>
             </div>
 
