Logo nuevo y responsividad optimizada

--- a/Sitio-Web/Index.html
+++ b/Sitio-Web/Index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="EstaHambreQueAta">
         <meta name="description" content="EstaHambreQueAta desata la creatividad">
 
-        <link rel="icon" href="Images/EHQALogoCropped.svg" type="image/x-icon"> 
+        <link rel="icon" href="Images/EHQALogoCropped2.svg" type="image/x-icon"> 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.9/glider.min.css">
         <link rel="stylesheet" href="CSS/Style.css"> 
 
@@ -31,7 +31,7 @@
                 <label for="menu-toggle" class="menu-button"><img src="Images/menuIcon.svg" alt="menu"></label>
 
                 <span class="svg-logo">
-                    <img  src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img  src="Images/EHQALogo3.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <ul class="nav-link-list">
@@ -535,7 +535,7 @@
 
             <div class="footer-brand-links-bar">
                 <span class="svg-logo">
-                    <img src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img src="Images/EHQALogo3.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <div class="social-media-links">
