--- a/Sitio-Web/public/CreateAccount.html
+++ b/Sitio-Web/public/CreateAccount.html
@@ -5,29 +5,32 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="EstaHambreQueAta">
-        <meta name="description" content="En EstaHambreQueAta desatas tu creatividad con estambres">
+        <meta name="description" content="EstaHambreQueAta desata la creatividad">
 
-        <link rel="icon" href="Images/EHQALogoCropped.svg" type="image/x-icon"> 
-        <link rel="stylesheet" href="CSS/Style.css">
-
-        <script src="Scripts/Script.js" defer></script>
+        <link rel="icon" href="images/EHQALogoCropped2.svg" type="image/x-icon">
+        <link href="./output.css" rel="stylesheet">
+        <link rel="stylesheet" href="src/css/Style.css"> 
 
         <title>Crear cuenta</title>
     </head>
 
     <body>
         <header>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            
             <nav>
                 <div id="search-bar-container" class="search-bar-container-hidden">
                     <div class="search-bar-input-container">
-                        <button class="search-bar-button" title="Buscar"><img src="Images/searchIcon.svg" alt="search"></button>
+                        <button class="search-bar-button" title="Buscar"><img src="images/searchIcon.svg" alt="search"></button>
                         <input class="search-bar-input" type="text" name="search" placeholder="Buscar" required>
-                        <button id="close-button" class="close-button" title="Cerrar"><img src="Images/closeIcon.svg" alt="close"></button>
+                        <button id="close-button" class="close-button" title="Cerrar"><img src="images/closeIcon.svg" alt="close"></button>
                     </div>
                 </div>
 
+                <label for="menu-toggle" class="menu-button"><img src="images/menuIcon.svg" alt="menu"></label>
+
                 <span class="svg-logo">
-                    <img  src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img  src="images/EHQALogo3.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <ul class="nav-link-list">
@@ -64,10 +67,12 @@
                         </ul>
                     </li>
                 </ul>
-
-                <button id="search-button" class="search-button" title="Buscar"><img src="Images/searchIcon.svg" alt="search"></button>
-                <button class="account-button" title="Crear Cuenta"><a href="CreateAccount.html"><img src="Images/userIcon.svg" alt="account"></a></button>
-                <button class="cart-button" title="Tienda"><a href="Index.html"><img src="Images/cartIcon.svg" alt="cart"></a></button>
+                
+                <div class="nav-button-bar">
+                    <button id="search-button" class="search-button" title="Buscar"><img src="images/searchIcon.svg" alt="search"></button>
+                    <button class="account-button" title="Crear Cuenta"><a href="CreateAccount.html"><img src="images/userIcon.svg" alt="account"></a></button>
+                    <button class="cart-button" title="Tienda"><a href="Index.html"><img src="images/cartIcon.svg" alt="cart"></a></button>
+                </div>
             </nav>
         </header>
 
@@ -149,7 +154,7 @@
             </form>
         </section>
 
-         <footer>
+        <footer>
             <div class="footer-links-bar"> 
 
                 <div class="about-links-container">
@@ -185,12 +190,12 @@
 
             <div class="footer-brand-links-bar">
                 <span class="svg-logo">
-                    <img src="Images/EHQALogo.svg" alt="EstaHambreQueAta-logo">
+                    <img src="images/EHQALogo3.svg" alt="EstaHambreQueAta-logo">
                 </span>
 
                 <div class="social-media-links">
-                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="Images/instagramIcon.svg" alt="Instagram"></a></button>
-                    <button class="youtube-button" title="Youtube"><img src="Images/youtubeIcon.svg" alt="Youtube"></button>
+                    <button class="instagram-button" title="https://www.instagram.com/estahambrequeata/"><a target="_blank" href="https://www.instagram.com/estahambrequeata/"><img src="images/instagramIcon.svg" alt="Instagram"></a></button>
+                    <button class="youtube-button" title="Youtube"><img src="images/youtubeIcon.svg" alt="Youtube"></button>
                 </div>
             </div>
 
@@ -204,4 +209,6 @@
             </div>
         </footer>
     </body>
+
+    <script src="scripts/Script.js" defer></script>
 </html>
