menú despegable icono añadido

--- a/Sitio-Web/public/CreateAccount.html
+++ b/Sitio-Web/public/CreateAccount.html
@@ -23,7 +23,7 @@
                     <div class="search-bar-input-container">
                         <button class="search-bar-button" title="Buscar"><img src="images/searchIcon.svg" alt="search"></button>
                         <input class="search-bar-input" type="text" name="search" placeholder="Buscar" required>
-                        <button id="close-button" class="close-button" title="Cerrar"><img src="images/closeIcon.svg" alt="close"></button>
+                        <button id="close-button" class="close-button" title="Cerrar"><img src="images/closeIconDark.svg" alt="close"></button>
                     </div>
                 </div>
 
