--- a/Sitio-Web/public/Index.html
+++ b/Sitio-Web/public/Index.html
@@ -23,11 +23,11 @@
                     <div class="search-bar-input-container">
                         <button class="search-bar-button" title="Buscar"><img src="images/searchIcon.svg" alt="search"></button>
                         <input class="search-bar-input" type="text" name="search" placeholder="Buscar" required>
-                        <button id="close-button" class="close-button" title="Cerrar"><img src="images/closeIcon.svg" alt="close"></button>
+                        <button id="close-button" class="close-button" title="Cerrar"><img src="images/closeIconDark.svg" alt="close"></button>
                     </div>
                 </div>
 
-                <label for="menu-toggle" class="menu-button"><img src="images/menuIcon.svg" alt="menu"></label>
+                <label for="menu-toggle" class="menu-button"><img id="menu-button-image" src="images/menuIcon.svg" alt="menu"></label>
 
                 <span class="svg-logo">
                     <img  src="images/EHQALogo3.svg" alt="EstaHambreQueAta-logo">
