--- a/Calculadora-Visual/Index.html
+++ b/Calculadora-Visual/Index.html
@@ -54,5 +54,5 @@
         </div>
     </body>
 
-    <script src="scripts/script.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </html>
