--- a/Tarjetas-Dinamicas/Index.html
+++ b/Tarjetas-Dinamicas/Index.html
@@ -22,5 +22,5 @@
         </section>
     </body>
 
-     <script src="scripts/script.js"></script>
+    <script type="module" src="scripts/main.js"></script>
 </html>
